v1.6.7
Original custom fields hook htmlvar broken - FIXED

v1.6.6
Added filter to geodir_filter_empty_terms function - ADDED
Best of widget not showing lazyload images on ajax change - FIXED
Added action hooks to login widget for social buttons - ADDED
Changed the way fullscreen map works for more compatibility - CHANGED
Mouse scroll zoom control setting not working for OpenStreetMap - FIXED
Popular post view widget -> "Post Type:" setting not working on CPT pages - FIXED
Responsive video shortcode - ADDED
Claim listing error message incorrect class - FIXED
Address field not showing the same on prview page - FIXED
Options added in CPT categories widget to disable viewing post type & category filters - ADDED
Server side marker clustering not working with OpenStreetMap - FIXED
BuddyPress admin bar not availble for non admin users - FIXED
Fixed map marker title special characters encoding - FIXED
Let popup forms template override from theme - FIXED
Added a filter to modify My Dashboard widget title - ADDED
Map routing direction feature added for detail page OpenStreetMap - CHANGED
Ajax pagination not working when more then gd_listings shortcodes added to the same page - FIXED

v1.6.5
Location page breadcrumb now uses location page slug - CHANGED
Date custom field date formats now more standardized - CHANGED
Claimed column added in exported listings csv file - FIXED
Imported images with spaces are not loaded via the lazyload function - FIXED
GD Listings shortcode extended with the "tags" parameter to filter listings by tags - ADDED
fgetcsv ignores special characters when they are at the beginning of line - FIXED
When a CPT has no listing it replaces the blank CPT name in meta titles - FIXED
Map un-ticked cats wrong on first load if default place CPT not used - FIXED
Nearest option added to related listings - ADDED
Add listing shortcode can sometimes show form twice - FIXED
My Favorite page uses first listing author name instead of logged in user name - FIXED